--- a/frontend/mrs.css
+++ b/frontend/mrs.css
@@ -1,47 +1,42 @@
-/* Styles for the body */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9; /* Lighter background color */
+    background-color: #f9f9f9;
 }
 
-/* Styles for the header */
 .header {
-    background-color: #555; /* Dark blue */
+    background-color: #555;
     color: #fff;
     padding: 20px;
     border-radius: 10px; 
     text-align: center;
-    margin: 20px auto; /* Centered with some space */
+    margin: 20px auto;
 }
 
-/* Styles for h1 heading */
 h1 {
     text-align: center;
     margin-top: 50px;
     color: #333; 
-    font-size: 24px; /* Larger font size */
+    font-size: 24px;
 }
 
-/* Styles for MRS div */
 #MRS {
     width: 80%;
     margin: 20px auto; /* Centered with some space */
     background-color: #fff; 
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/* Styles for user management link */
 .user-management-link {
     position: fixed; 
-    bottom: 20px;
-    right: 20px;
+    bottom: 10px;
+    right: 10px;
     background-color: #007bff;
     color: #fff;
-    padding: 10px 20px;
+    padding: 6px 12px;
     border-radius: 4px;
     text-decoration: none;
     font-size: 14px;
@@ -51,18 +46,17 @@ h1 {
     background-color: #0056b3;
 }
 
-/* Styles for table */
 table {
     width: 100%;
     font-family: Arial, sans-serif;
     border-collapse: collapse;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 table th, table td {
-    padding: 10px; /* Increased padding */
+    padding: 10px;
     text-align: left;
-    border-bottom: 1px solid #ddd; /* Lighter border */
+    border-bottom: 1px solid #ddd;
 }
 
 table th {
@@ -74,24 +68,23 @@ table tr:hover {
     background-color: #f5f5f5;
 }
 
-/* Styles for buttons */
 .edit-button, .delete-button {
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
-    color: white; /* Added color to ensure proper visibility */
+    color: white;
 }
 
 .edit-button {
-    background-color: #28a745; /* Green color */
+    background-color: #28a745;
 }
 
 .delete-button {
-    background-color: #dc3545; /* Red color */
+    background-color: #dc3545;
 }
 
 .edit-button:hover, .delete-button:hover {
-    filter: brightness(90%); /* Slightly darker on hover */
+    filter: brightness(90%);
 }
