--- a/frontend/home.css
+++ b/frontend/home.css
@@ -2,8 +2,6 @@
     background-color: #555;
     color: #fff;
     padding: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
     text-align: center;
     margin: 0; 
 }
@@ -13,7 +11,6 @@
     margin: auto;
     padding: 20px;
     border: 1px solid #ccc;
-    border-radius: 20px;
     background-color: #fff; 
     font-family: Arial, sans-serif; 
 }
@@ -49,9 +46,14 @@
     font-size: 16px; 
 }
 
+.bold-header {
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 35px;
+}
 .container form div button {
     padding: 10px 20px;
-    background-color: #007bff; 
+    background-color: #555; 
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -61,7 +63,7 @@
 }
 
 .container form div button:hover {
-    background-color: #0056b3; 
+    background-color: #373737; 
 }
 
 .user-management-link {
